lerna-debug.log
lerna(verbose) GitUtilities.isInitialized    ()
lerna(verbose) GitUtilities.isInitialized    () => true
lerna(verbose) GitUtilities.getTopLevelDirectory()
lerna(verbose) GitUtilities.getTopLevelDirectory() => "."
lerna(verbose) FileSystemUtilities.existsSync("./lerna.json")
lerna(verbose) FileSystemUtilities.existsSync("./lerna.json") => true
lerna(verbose) FileSystemUtilities.readFileSync("./lerna.json")
lerna(verbose) FileSystemUtilities.readFileSync("./lerna.json") => "{\n  \"lerna\": \"2.0.0-beta.31\",\n  \"packages\": [\n    \"packages/*\"\n  ],\n  \"version\": \"independent\"\n}"
lerna(verbose) FileSystemUtilities.existsSync("./package.json")
lerna(verbose) FileSystemUtilities.existsSync("./package.json") => true
lerna(verbose) FileSystemUtilities.readFileSync("./package.json")
lerna(verbose) FileSystemUtilities.readFileSync("./package.json") => "{\n  \"scripts\": {\n    \"postinstall\": \"lerna bootstrap\",\n    \"build\": \"lerna run build\",\n    \"build:comparisons\": \"lerna run build:comparisons\",\n    \"deploy\": \"lerna run deploy\"\n  },\n  \"devDependencies\": {\n    \"gh-pages\": \"^0.12.0\",\n    \"js-yaml\": \"^3.7.0\",\n    \"lerna\": \"2.0.0-beta.31\"\n  },\n  \"eslintConfig\": {\n    \"extends\": \"./node_modules/react-scripts/config/eslint.js\"\n  }\n}"
lerna(info)    Lerna v2.0.0-beta.31
lerna(info)    Independent Versioning Mode
lerna(verbose) FileSystemUtilities.existsSync("./package.json")
lerna(verbose) FileSystemUtilities.existsSync("./package.json") => true
lerna(verbose) FileSystemUtilities.existsSync("./lerna.json")
lerna(verbose) FileSystemUtilities.existsSync("./lerna.json") => true
lerna(verbose) FileSystemUtilities.existsSync("./VERSION")
lerna(verbose) FileSystemUtilities.existsSync("./VERSION") => false
lerna(verbose) FileSystemUtilities.existsSync("./packages/js/package.json")
lerna(verbose) FileSystemUtilities.existsSync("./packages/js/package.json") => true
lerna(verbose) Attempting running RunCommand.initialize
lerna(verbose) Successfully ran RunCommand.initialize
lerna(verbose) Attempting running RunCommand.execute
lerna(verbose) NpmUtilities.runScriptInDir   ("build:comparisons", [], "./packages/js")
lerna(verbose) NpmUtilities.execInDir        ("run build:comparisons", [], "./packages/js")
lerna(error)   NpmUtilities.execInDir        ("run build:comparisons", [], "./packages/js")
    Error: Command failed: npm run build:comparisons 
    /Users/dmitryzaets/Dev/github/dmitry-zaets/StarRatio/star-ratio/tools/buildComparisons.js:5
    const path = process.argv[2];
                               ^
    SyntaxError: Identifier 'path' has already been declared
        at Object.exports.runInThisContext (vm.js:76:16)
        at Module._compile (module.js:542:28)
        at Object.Module._extensions..js (module.js:579:10)
        at Module.load (module.js:487:32)
        at tryModuleLoad (module.js:446:12)
        at Function.Module._load (module.js:438:3)
        at Module.runMain (module.js:604:10)
        at run (bootstrap_node.js:394:7)
        at startup (bootstrap_node.js:149:9)
        at bootstrap_node.js:509:3
    
    npm ERR! Darwin 16.3.0
    npm ERR! argv "/usr/local/bin/node" "/usr/local/bin/npm" "run" "build:comparisons"
    npm ERR! node v6.9.1
    npm ERR! npm  v4.0.5
    npm ERR! code ELIFECYCLE
    npm ERR! js@ build:comparisons: `node ../../tools/buildComparisons.js ../packages/js/comparisons`
    npm ERR! Exit status 1
    npm ERR! 
    npm ERR! Failed at the js@ build:comparisons script 'node ../../tools/buildComparisons.js ../packages/js/comparisons'.
    npm ERR! Make sure you have the latest version of node.js and npm installed.
    npm ERR! If you do, this is most likely a problem with the js package,
    npm ERR! not with npm itself.
    npm ERR! Tell the author that this fails on your system:
    npm ERR!     node ../../tools/buildComparisons.js ../packages/js/comparisons
    npm ERR! You can get information on how to open an issue for this project with:
    npm ERR!     npm bugs js
    npm ERR! Or if that isn't available, you can get their info via:
    npm ERR!     npm owner ls js
    npm ERR! There is likely additional logging output above.
    
    npm ERR! Please include the following file with any support request:
    npm ERR!     /Users/dmitryzaets/Dev/github/dmitry-zaets/StarRatio/star-ratio/packages/js/npm-debug.log
    
        at ChildProcess.exithandler (child_process.js:206:12)
        at emitTwo (events.js:106:13)
        at ChildProcess.emit (events.js:191:7)
        at maybeClose (internal/child_process.js:877:16)
        at Socket.<anonymous> (internal/child_process.js:334:11)
        at emitOne (events.js:96:13)
        at Socket.emit (events.js:188:7)
        at Pipe._handle.close [as _onclose] (net.js:498:12)
lerna(error)   NpmUtilities.runScriptInDir   ("build:comparisons", [], "./packages/js")
lerna(info)    
> js@ build:comparisons /Users/dmitryzaets/Dev/github/dmitry-zaets/StarRatio/star-ratio/packages/js
> node ../../tools/buildComparisons.js ../packages/js/comparisons


lerna(error)   Errored while running npm script 'build:comparisons' in 'js'
lerna(error)   Errored while running RunCommand.execute
